# wb-serverless-stack

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
data/: download_bird.py  make_dev_subset.py  registry_uploader.py
docs/: narrative.md
scripts/: make_baseline.py  run_in_sandbox.py  smoke_eval.py  smoke_reward.py
src/: __init__.py  config.py  data_loader.py  eval_bird_dev.py  eval_callback.py  lineage.py  prompts.py  reward.py  rollout.py  sandbox_pool.py  schema.py  train_local.py  train_serverless.py
src/sandbox_runtime/: run_sql.py
